chore: fix bugs and typos
